# PlotJuggler

./: .gitmodules  CMakeLists.txt
TinyMAT/: tinymatwriter.cpp  tinymatwriter.h
plotter_gui/: CMakeLists.txt  curvelist_panel.cpp  curvelist_view.h  curvetree_view.h  customtracker.cpp  customtracker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotmagnifier.cpp  plotwidget.cpp  plotzoomer.h  tabbedplotwidget.cpp
plugins/DataStreamZMQ/: CMakeLists.txt  datastreamserver.cpp  datastreamserver.h
qwt/src/: CMakeLists.txt  qwt_global.h  qwt_plot_curve.cpp  qwt_plot_curve.h
